# personal-lab10-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/models/: rainfall.py  station.py
app/routers/: rainfall.py  stations.py
app/services/: geo.py  rainfall_service.py  station_service.py
app/utils/: parsing.py
docs/: plan-pluvioapp-backend-phase1.md  plan-pluvioapp-frontend-react-spa.md  pluvioapp-tech-spec-v1.1.md  review-pluvioapp-backend-phase1.md  review-pluvioapp-frontend-react-spa.md  technical-brief-pluvioapp-backend-and-project-structure.md  technical-brief-pluvioapp-frontend-react-spa.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  health.ts  index.ts  rainfall.ts  stations.ts
frontend/src/components/charts/: YearlyRainfallChart.tsx
frontend/src/components/common/: EmptyState.tsx  ErrorMessage.tsx  LoadingSpinner.tsx
frontend/src/components/map/: StationMap.tsx
frontend/src/components/search/: SearchPanel.tsx
frontend/src/components/stations/: StationCard.tsx  StationDetail.tsx  StationList.tsx
frontend/src/hooks/: useStationDetail.ts  useStationSearch.ts
frontend/src/types/: index.ts  rainfall.ts  station.ts
frontend/src/utils/: format.ts  validation.ts
scripts/: build_aggregations.py  ingest.py
tests/: conftest.py  test_geo.py  test_rainfall.py  test_stations.py
